--- a/DuePayments/en.lproj/Main.strings
+++ b/DuePayments/en.lproj/Main.strings
@@ -22,3 +22,5 @@
 
 /* Class = "UILabel"; text = "Name"; ObjectID = "u6r-sh-h53"; */
 "u6r-sh-h53.text" = "Name";
+
+"Ccm-6b-ygb.normalTitle" = "Choose";
