Added settings tab

--- a/DuePayments/en.lproj/Localizable.strings
+++ b/DuePayments/en.lproj/Localizable.strings
@@ -17,6 +17,8 @@
 "Total" = "Total";
 "Back" = "Back";
 "Details" = "Details";
-
+"Payments" = "Payments";
+"Settings" = "Settings";
+"LastUpdate" = "Last update";
 "CouldNotUploadPayments" = "Could not upload payments to the server - please check your internet connection.";
 "CouldNotDownloadPayments" = "Could not download payments from the server - please check your internet connection.";
