--- a/DuePayments/pl.lproj/Localizable.strings
+++ b/DuePayments/pl.lproj/Localizable.strings
@@ -17,6 +17,8 @@
 "Total" = "Razem";
 "Back" = "Wróć";
 "Details" = "Szczegóły";
-
+"Payments" = "Płatności";
+"Settings" = "Ustawienia";
+"LastUpdate" = "Ostatnia aktualizacja";
 "CouldNotUploadPayments" = "Nie można było zaktualizować płatności na serwerze - sprawdź swoje połączenie z internetem.";
 "CouldNotDownloadPayments" = "Nie można było pobrać płatności z serwera - sprawdź swoje połączenie z internetem.";
