--- a/DuePayments/pl.lproj/Main.strings
+++ b/DuePayments/pl.lproj/Main.strings
@@ -26,3 +26,11 @@
 "Ccm-6b-ygb.normalTitle" = "Wybierz";
 
 "YZ7-SH-u8u.normalTitle" = "Wybierz";
+
+"Au1-tq-eXh.title" = "Ustawienia";
+
+"pYm-YZ-MHC.headerTitle" = "Ustawienia";
+
+"3zh-Kb-f04.footerTitle" = "Autor: Paweł Wojtkowiak";
+
+"eYW-WV-xkq.text" = "Aktualizuj płatności na serwerze po każdej zmianie";
