--- a/DuePayments/en.lproj/Main.strings
+++ b/DuePayments/en.lproj/Main.strings
@@ -26,3 +26,11 @@
 "Ccm-6b-ygb.normalTitle" = "Choose";
 
 "YZ7-SH-u8u.normalTitle" = "Choose";
+
+"Au1-tq-eXh.title" = "Settings";
+
+"pYm-YZ-MHC.headerTitle" = "Settings";
+
+"3zh-Kb-f04.footerTitle" = "Author: Paweł Wojtkowiak";
+
+"eYW-WV-xkq.text" = "Update payments on the server after each change";
