--- a/DuePayments/en.lproj/Main.strings
+++ b/DuePayments/en.lproj/Main.strings
@@ -34,3 +34,7 @@
 "3zh-Kb-f04.footerTitle" = "Author: Paweł Wojtkowiak";
 
 "eYW-WV-xkq.text" = "Update payments on the server after each change";
+
+"N09-Ux-KmI.text" = "List identifier";
+
+"zfU-IO-DfA.placeholder" = "Identifier";
