--- a/DuePayments/pl.lproj/Main.strings
+++ b/DuePayments/pl.lproj/Main.strings
@@ -34,3 +34,7 @@
 "3zh-Kb-f04.footerTitle" = "Autor: Paweł Wojtkowiak";
 
 "eYW-WV-xkq.text" = "Aktualizuj płatności na serwerze po każdej zmianie";
+
+"N09-Ux-KmI.text" = "Identyfikator listy";
+
+"zfU-IO-DfA.placeholder" = "Identyfikator";
