--- a/DuePayments/en.lproj/Main.strings
+++ b/DuePayments/en.lproj/Main.strings
@@ -38,3 +38,5 @@
 "N09-Ux-KmI.text" = "List identifier";
 
 "zfU-IO-DfA.placeholder" = "Identifier";
+
+"pRU-MD-6AS.normalTitle" = "Create new list"
