--- a/DuePayments/pl.lproj/Main.strings
+++ b/DuePayments/pl.lproj/Main.strings
@@ -38,3 +38,5 @@
 "N09-Ux-KmI.text" = "Identyfikator listy";
 
 "zfU-IO-DfA.placeholder" = "Identyfikator";
+
+"pRU-MD-6AS.normalTitle" = "Utwórz nową listę"
