--- a/DuePayments/en.lproj/Main.strings
+++ b/DuePayments/en.lproj/Main.strings
@@ -39,4 +39,6 @@
 
 "zfU-IO-DfA.placeholder" = "Identifier";
 
-"pRU-MD-6AS.normalTitle" = "Create new list"
+"pRU-MD-6AS.normalTitle" = "Create new list";
+
+"yxh-Kb-fik.normalTitle" = "Manage lists";
