--- a/DuePayments/pl.lproj/Main.strings
+++ b/DuePayments/pl.lproj/Main.strings
@@ -39,4 +39,6 @@
 
 "zfU-IO-DfA.placeholder" = "Identyfikator";
 
-"pRU-MD-6AS.normalTitle" = "Utwórz nową listę"
+"pRU-MD-6AS.normalTitle" = "Utwórz nową listę";
+
+"yxh-Kb-fik.normalTitle" = "Zarządzaj listami";
