--- a/DuePayments/pl.lproj/Main.strings
+++ b/DuePayments/pl.lproj/Main.strings
@@ -31,7 +31,8 @@
 
 "pYm-YZ-MHC.headerTitle" = "Ustawienia";
 
-"3zh-Kb-f04.footerTitle" = "Autor: Paweł Wojtkowiak";
+"3zh-Kb-f04.headerTitle" = "Autor: Paweł Wojtkowiak";
+"3zh-Kb-f04.footerTitle" = "Ikony dostarczone przez Icons8.com";
 
 "eYW-WV-xkq.text" = "Aktualizuj płatności na serwerze po każdej zmianie";
 
@@ -42,3 +43,6 @@
 "pRU-MD-6AS.normalTitle" = "Utwórz nową listę";
 
 "yxh-Kb-fik.normalTitle" = "Zarządzaj listami";
+
+"asx-nV-Bv3.title" = "Płatności";
+"Au1-tq-eXh.title" = "Ustawienia";
